--- a/Assets/UI/StandardTools/AppBarTop.uxml
+++ b/Assets/UI/StandardTools/AppBarTop.uxml
@@ -1,3 +1,3 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="width: 360px; height: 56px; background-color: rgba(192, 192, 192, 255);" />
+    <ui:VisualElement name="AppBarTop" style="width: 360px; height: 56px; background-color: rgb(192, 192, 192);" />
 </ui:UXML>
